# media-blob-kit

./: .dockerignore  Cargo.toml  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  docker-compose.yml  report.md
.cargo/: config.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_user_table.rs  m20241201_000002_create_refresh_tokens_table.rs  m20241202_000003_create_projects_table.rs  m20241202_000004_create_api_keys_table.rs  m20241204_000005_create_files_table.rs  m20241204_000006_create_jobs_table.rs
src/: config.rs  error.rs  main.rs  pagination.rs
src/entities/: api_key.rs  file.rs  job.rs  mod.rs  project.rs  refresh_token.rs  user.rs
src/middleware/: api_key.rs  auth.rs  mod.rs  role.rs
src/models/: settings.rs
src/routes/: api_keys.rs  auth.rs  files.rs  home.rs  jobs.rs  mod.rs  projects.rs  upload.rs  users.rs
src/services/: cleanup.rs  mod.rs  s3.rs  worker.rs
src/utils/: image_processor.rs  mod.rs
utils/: reset_db.rs
