[package]
name = "media-blob-kit"
version = "0.1.0"
edition = "2024"
default-run = "media-blob-kit"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4.5.21", features = ["derive"] }
migration = { path = "migration" }
rpassword = "7.4.0"
chrono = "0.4.42"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[workspace]
members = [".", "migration"]

[[bin]]
name = "reset_db"
path = "utils/reset_db.rs"
