[package]
name = "media-blob-kit"
version = "0.1.0"
edition = "2021"
default-run = "media-blob-kit"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4.5.21", features = ["derive"] }
migration = { path = "migration" }
rpassword = "7.4.0"
chrono = "0.4.42"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4", "serde", "fast-rng"] }
aws-config = "1.5.10"
aws-sdk-s3 = "1.60.0"
axum-extra = { version = "0.9.6", features = ["multipart"] }
image = { version = "0.25.9", features = ["avif", "webp", "jpeg", "png"] }
url = "2.5.7"

[workspace]
members = [".", "migration"]

[[bin]]
name = "reset_db"
path = "utils/reset_db.rs"
